--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "chart.js": "^4.5.0",
+    "echarts": "^5.6.0",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-router": "^4.5.1"
