--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "chart.js": "^4.5.0",
+    "cytoscape": "^3.32.1",
+    "cytoscape-dagre": "^2.5.0",
+    "cytoscape-popper": "^4.0.1",
+    "cytoscape-qtip": "^2.8.0",
     "echarts": "^5.6.0",
     "katex": "^0.16.22",
     "vue": "^3.5.17",
