Add Cytoscape.js topology visualization for federated learning clusters
- Implemented a new HTML file for visualizing a federated learning topology using Cytoscape.js.
- Created a responsive layout with controls for changing graph layouts and starting/stopping animations.
- Defined a structured data generation function to create nodes and edges representing different layers of the federated learning architecture.
- Added styles for nodes and edges to visually distinguish between different types of entities (aggregators, proxies, clients).
- Included animation effects for simulating training rounds and client participation.
- Implemented event listeners for node interactions to enhance user experience.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "ant-design-vue": "^4.2.6",
     "chart.js": "^4.5.0",
     "cytoscape": "^3.32.1",
+    "cytoscape-cola": "^2.5.1",
     "cytoscape-dagre": "^2.5.0",
+    "cytoscape-klay": "^3.1.4",
     "cytoscape-popper": "^4.0.1",
     "cytoscape-qtip": "^2.8.0",
     "echarts": "^5.6.0",
